--- a/components/auth/styles.css
+++ b/components/auth/styles.css
@@ -2,6 +2,9 @@ body {
   font-family: "Poppins", sans-serif;
   height: 100vh;
 }
+.header{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
 
 a {
   color: #92badd;
