--- a/components/pages/style.css
+++ b/components/pages/style.css
@@ -27,3 +27,10 @@ fill:rgb(245, 222, 18);
 .active{
   border-bottom: 4px solid rgb(226, 69, 134);
 }
+.tab-selected{
+  
+color:rgb(245, 222, 18);
+}
+.tab-selected path{
+  fill:rgb(245, 222, 18);
+}
