--- a/components/auth/styles.css
+++ b/components/auth/styles.css
@@ -118,7 +118,7 @@ input[type=button]:active, input[type=submit]:active, input[type=reset]:active  
   transform: scale(0.95);
 }
 
-input[type='text'], input[type='password'],input[type='firstName'],input[type='lastName']{
+input[type='text'], input[type='password'],input[type='firstName'],input[type='lastName'], input[type='courseId'],input[type="courseName"],input[type="description"]{
   background-color: #f6f6f6;
   border: none;
   color: #0d0d0d;
@@ -161,3 +161,14 @@ input[type=text]:placeholder {
 }
 
 
+/*AddCourse*/
+.addCourse{
+   list-style-type: none;
+   display:grid;
+   justify-content: center;
+   align-content: center;
+   text-align: center;
+   grid-template-columns: repeat(3, 1fr);
+   grid-gap: 1rem;
+
+}
